--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,6 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 p7zip_jll = "3f19e933-33d8-53b3-aaab-bd5110c3b7a0"
 
 [compat]
-julia = "1.11"
-Distances = ">=0.10.0"
-p7zip_jll = ">=17.4.0"
+julia = "^1"
+Distances = "^0.10.7"
+p7zip_jll = "^17.4.0"
